--- a/polytest.css
+++ b/polytest.css
@@ -2,18 +2,28 @@
 html,body {
   height: 100%;
   margin: 0;
-  background-color: #E5E5E5;
-  font-family: 'RobotoDraft', sans-serif;
+  font-size: 16px;
+  /*background-color: #E5E5E5;
+  font-family: 'RobotoDraft', sans-serif;*/
 }
+
 core-header-panel {
   height: 100%;
   overflow: auto;
-  -webkit-overflow-scrolling: touch; 
+  -webkit-overflow-scrolling: touch;
 }
+
 core-toolbar {
-  background: #03a9f4;
-  color: white;
+  /*background: #03a9f4;
+  color: white;*/
+  font-size: 16px;
 }
+
+.container {
+  width: 80%;
+  margin: 50px auto;
+}
+
 #tabs {
   width: 100%;
   margin: 0;
@@ -23,3 +33,18 @@ core-toolbar {
   user-select: none;
   text-transform: uppercase;
 }
+
+paper-input.narrow {
+  width: 180px;
+}
+
+table {
+}
+
+table td {
+  border-bottom: solid 1px white;
+}
+
+/*paper-button {
+  background: #42bd41;
+}*/
