--- a/theme.css
+++ b/theme.css
@@ -1,5 +1,5 @@
-@import url("//fonts.googleapis.com/css?family=Open+Sans");
-@import url("//fonts.googleapis.com/css?family=Oswald:700");
+@import url("//fonts.googleapis.com/css?family=Oxygen:700");
+@import url("//fonts.googleapis.com/css?family=Source+Sans+Pro");
 /*
  * PolymerThemes v0.3.0
  * Homepage: http://polymerthemes.com
@@ -9,7 +9,7 @@
  * Compatible with Polymer 0.4.2
  */
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-weight: 400;
@@ -20,11 +20,11 @@ body {
   margin: 0px;
   padding: 0px;
   height: 100%;
-  background-color: #212121;
-  color: #fff;
+  background-color: #fff;
+  color: #444;
 }
 html /deep/ .font-special {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Oxgygen', sans-serif;
 }
 html /deep/ core-header-panel {
   height: 100%;
@@ -37,11 +37,11 @@ html /deep/ .core-header {
   font-size: 18px;
   padding: 0 10px;
   transition: height 0.2s;
-  background-color: #424b4b;
-  color: #bdced7;
+  background-color: #373b50;
+  color: #fff;
 }
 html /deep/ .core-header a {
-  color: #bdced7;
+  color: #fff;
 }
 html /deep/ .core-header paper-item {
   padding: 7px 20px;
@@ -67,7 +67,7 @@ html /deep/ section {
   padding: 40px 0px;
 }
 html /deep/ section[hero] {
-  background-color: #2c2f2f;
+  background-color: #f2f7fa;
 }
 html /deep/ h1,
 html /deep/ h2,
@@ -82,14 +82,14 @@ html /deep/ h6 {
 html /deep/ h1,
 html /deep/ h3,
 html /deep/ h5 {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Oxgygen', sans-serif;
 }
 html /deep/ h1 {
   font-size: 60px;
   margin: 30px 0px;
 }
 html /deep/ h2 {
-  color: #fff;
+  color: #444;
   font-size: 40px;
   margin: 20px 0px;
 }
@@ -101,7 +101,7 @@ html /deep/ h4 {
   font-size: 20px;
 }
 html /deep/ a {
-  color: #fff;
+  color: #444;
   text-decoration: none;
 }
 html /deep/ a:hover {
@@ -112,7 +112,7 @@ html /deep/ .core-header /deep/ a:hover {
 }
 html /deep/ #ripple,
 html /deep/::shadow #ripple {
-  color: #a7d6d7;
+  color: #a6abc2;
 }
 html /deep/ paper-button {
   margin: 2px;
@@ -121,75 +121,75 @@ html /deep/ paper-button[link] {
   text-decoration: underline;
 }
 html /deep/ paper-button[disabled] {
-  color: #272929 !important;
-  background: #4e5151 !important;
+  color: #545660 !important;
+  background: #afb1b9 !important;
 }
 html /deep/ paper-button[raised] {
-  color: #212121;
+  color: #444;
 }
 html /deep/ paper-button #ripple,
 html /deep/ paper-button::shadow #ripple {
-  color: #a6a6a6;
+  color: #b4b4b4;
 }
 html /deep/ paper-button[primary] {
-  color: #3b8183;
+  color: #373b50;
 }
 html /deep/ paper-button[primary] #ripple,
 html /deep/ paper-button[primary]::shadow #ripple {
-  color: #a7d6d7;
+  color: #a6abc2;
 }
 html /deep/ paper-button[primary][raised] {
-  background-color: #3b8183;
+  background-color: #373b50;
   color: #fff;
 }
 html /deep/ paper-button[primary][raised] #ripple,
 html /deep/ paper-button[primary][raised]::shadow #ripple {
-  color: #326e6f;
+  color: #2f3244;
 }
 html /deep/ paper-button[secondary] {
-  color: #4db6ac;
+  color: #90a4ae;
 }
 html /deep/ paper-button[secondary] #ripple,
 html /deep/ paper-button[secondary]::shadow #ripple {
-  color: #b8e2de;
+  color: #d3dbdf;
 }
 html /deep/ paper-button[secondary][raised] {
-  background-color: #4db6ac;
+  background-color: #90a4ae;
   color: #fff;
 }
 html /deep/ paper-button[secondary][raised] #ripple,
 html /deep/ paper-button[secondary][raised]::shadow #ripple {
-  color: #409c93;
+  color: #748d9a;
 }
 html /deep/ paper-button[success] {
-  color: #8bc34a;
+  color: #9dc56e;
 }
 html /deep/ paper-button[success] #ripple,
 html /deep/ paper-button[success]::shadow #ripple {
-  color: #d1e7b7;
+  color: #d8e8c5;
 }
 html /deep/ paper-button[success][raised] {
-  background-color: #8bc34a;
+  background-color: #9dc56e;
   color: #fff;
 }
 html /deep/ paper-button[success][raised] #ripple,
 html /deep/ paper-button[success][raised]::shadow #ripple {
-  color: #77ac39;
+  color: #87b84d;
 }
 html /deep/ paper-button[info] {
-  color: #424b4b;
+  color: #ffb74d;
 }
 html /deep/ paper-button[info] #ripple,
 html /deep/ paper-button[info]::shadow #ripple {
-  color: #b0baba;
+  color: #ffe2b8;
 }
 html /deep/ paper-button[info][raised] {
-  background-color: #424b4b;
+  background-color: #ffb74d;
   color: #fff;
 }
 html /deep/ paper-button[info][raised] #ripple,
 html /deep/ paper-button[info][raised]::shadow #ripple {
-  color: #384040;
+  color: #ffa31b;
 }
 html /deep/ paper-button[warning] {
   color: #fadd60;
@@ -207,19 +207,19 @@ html /deep/ paper-button[warning][raised]::shadow #ripple {
   color: #f8d22e;
 }
 html /deep/ paper-button[error] {
-  color: #ff7043;
+  color: #ff6e40;
 }
 html /deep/ paper-button[error] #ripple,
 html /deep/ paper-button[error]::shadow #ripple {
-  color: #ffc6b4;
+  color: #ffc5b3;
 }
 html /deep/ paper-button[error][raised] {
-  background-color: #ff7043;
+  background-color: #ff6e40;
   color: #fff;
 }
 html /deep/ paper-button[error][raised] #ripple,
 html /deep/ paper-button[error][raised]::shadow #ripple {
-  color: #ff4b13;
+  color: #ff4a10;
 }
 html /deep/ paper-button[link] {
   color: #000;
@@ -240,21 +240,21 @@ html /deep/ paper-checkbox {
   padding: 20px;
 }
 html /deep/ paper-checkbox::shadow #ink {
-  color: #424b4b;
+  color: #444;
 /* Change the ink color for checked state */
 }
 html /deep/ paper-checkbox::shadow #ink[checked] {
-  color: #fff;
+  color: #373b50;
 }
 html /deep/ paper-checkbox::shadow #checkbox {
-  border-color: #424b4b;
+  border-color: #444;
 /* Change the checkbox checked color */
 }
 html /deep/ paper-checkbox::shadow #checkbox.checked {
-  border-color: #fff;
+  border-color: #373b50;
 }
 html /deep/ paper-fab {
-  background-color: #3b8183;
+  background-color: #373b50;
 }
 html /deep/ paper-fab::shadow core-icon {
   color: #fff !important;
@@ -265,25 +265,25 @@ html /deep/ core-toolbar paper-tabs {
 }
 html /deep/ paper-tabs,
 html /deep/ core-toolbar {
-  background-color: #424b4b;
-  color: #bdced7;
+  background-color: #373b50;
+  color: #fff;
   -webkit-box-shadow: 0px 3px 2px rgba(0,0,0,0.2);
   box-shadow: 0px 3px 2px rgba(0,0,0,0.2);
 }
 html /deep/ paper-tabs.transparent-teal {
   background-color: transparent;
-  color: #424b4b;
+  color: #373b50;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 html /deep/ paper-tabs.transparent-teal::shadow #selectionBar {
-  background-color: #424b4b;
+  background-color: #373b50;
 }
 html /deep/ paper-tabs.transparent-teal paper-tab::shadow #ink {
-  color: #424b4b;
+  color: #373b50;
 }
 html /deep/ paper-tabs[noink][nobar] paper-tab.core-selected {
-  color: #3b8183;
+  color: #90a4ae;
 }
 html /deep/ paper-tabs::shadow * {
   -webkit-user-select: none;
@@ -294,10 +294,10 @@ html /deep/ paper-tabs::shadow * {
   -webkit-touch-callout: none;
 }
 html /deep/ paper-tabs::shadow #selectionBar {
-  background-color: #3b8183;
+  background-color: #90a4ae;
 }
 html /deep/ paper-tab::shadow #ink {
-  color: #3b8183;
+  color: #90a4ae;
 }
 html /deep/ paper-toast {
   background: #323232;
@@ -305,7 +305,7 @@ html /deep/ paper-toast {
   text-align: left;
 }
 html /deep/ paper-toast .highlight {
-  color: #424b4b;
+  color: #ffb74d;
 }
 html /deep/ paper-toast::shadow * {
   -webkit-user-select: none;
@@ -316,42 +316,42 @@ html /deep/ paper-toast::shadow * {
   -webkit-touch-callout: none;
 }
 html /deep/ paper-input[focused] .floated-label {
-  color: #3b8183;
+  color: #373b50;
 }
 html /deep/ paper-input[focused] .error-text,
 html /deep/ paper-input[focused] .error-icon {
-  color: #ff7043;
+  color: #ff6e40;
 }
 html /deep/ paper-input .focused-underline {
-  background-color: #fff;
+  background-color: #444;
 }
 html /deep/ paper-input.invalid .focused-underline {
-  background-color: #ff7043;
+  background-color: #ff6e40;
 }
 html /deep/ paper-input.invalid[focused] .floated-label {
-  color: #ff7043;
+  color: #ff6e40;
 }
 html /deep/ paper-input[disabled] {
-  color: #4e5151;
+  color: #afb1b9;
 }
 html /deep/ .toolbar {
-  color: #bdced7;
-  background: #424b4b;
+  color: #fff;
+  background: #373b50;
 }
 html /deep/ .card {
-  background: #212121;
+  background: #fff;
 }
 html /deep/ paper-menu-button paper-item {
   color: #fff;
 }
 html /deep/ paper-menu-button paper-item:hover {
-  background-color: #424b4b;
+  background-color: #373b50;
 }
 html /deep/ paper-menu-button::shadow #menu {
   color: #fff;
 }
 html /deep/ paper-menu-button::shadow .paper-menu-button-overlay-bg {
-  background-color: #373e3e;
+  background-color: #2c3040;
 }
 html /deep/ .small {
   font-size: 12px;
@@ -361,65 +361,60 @@ html /deep/ .logo {
 }
 html /deep/ .logo a {
   font-weight: 700;
-  color: #bdced7;
+  color: #fff;
 }
 html /deep/ .inverse {
   background-color: #7ec0ee;
   color: #fff;
 }
 html /deep/ paper-progress::shadow #activeProgress {
-  background-color: #3b8183;
+  background-color: #373b50;
 }
 html /deep/ paper-progress::shadow #secondaryProgress {
-  background-color: #4db6ac;
+  background-color: #90a4ae;
 }
 html /deep/ paper-radio-button::shadow #ink {
-  color: #a7d6d7;
+  color: #a6abc2;
 }
 html /deep/ paper-radio-button::shadow #ink[checked] {
-  color: #a7d6d7;
+  color: #a6abc2;
 }
 html /deep/ paper-radio-button::shadow #onRadio {
-  background-color: #fff;
+  background-color: #373b50;
 }
 html /deep/ paper-radio-button::shadow #offRadio {
-  background-color: #424b4b;
+  background-color: #fff;
 }
 html /deep/ paper-toggle-button::shadow paper-radio-button::shadow #ink {
-  color: #a7d6d7;
+  color: #a6abc2;
 }
 html /deep/ paper-toggle-button::shadow paper-radio-button::shadow #ink[checked] {
-  color: #a7d6d7;
+  color: #a6abc2;
 }
 html /deep/ paper-toggle-button::shadow paper-radio-button::shadow #onRadio {
-  background-color: #fff;
+  background-color: #373b50;
 }
 html /deep/ paper-toggle-button::shadow paper-radio-button::shadow #offRadio {
-  background-color: #424b4b;
-}
-html /deep/ paper-toggle-button::shadow #toggleBar {
   background-color: #fff;
 }
+html /deep/ paper-toggle-button::shadow #toggleBar {
+  background-color: #444;
+}
 html /deep/ paper-toggle-button::shadow #toggleBar[checked] {
-  background-color: #424b4b;
+  background-color: #373b50;
 }
 html /deep/ paper-slider::shadow #sliderBar::shadow #activeProgress {
-  background-color: #3b8183;
+  background-color: #373b50;
 }
 html /deep/ paper-slider::shadow #sliderBar::shadow #secondaryProgress {
-  background-color: #4db6ac;
+  background-color: #90a4ae;
 }
 html /deep/ paper-slider::shadow #sliderKnobInner {
-  background-color: #3b8183;
+  background-color: #373b50;
 }
 html /deep/ paper-slider::shadow #sliderKnobInner::before {
-  background-color: #3b8183;
+  background-color: #373b50;
 }
 html /deep/ paper-icon-button[disabled]::shadow core-icon {
-  color: #4e5151 !important;
-}
-html /deep/ h1,
-html /deep/ h3,
-html /deep/ h5 {
-  text-transform: uppercase;
+  color: #afb1b9 !important;
 }
