Started meteor-x elements

--- a/polytest.css
+++ b/polytest.css
@@ -1,50 +1,6 @@
 /* CSS declarations go here */
 html,body {
-  height: 100%;
-  margin: 0;
   font-size: 16px;
-  /*background-color: #E5E5E5;
-  font-family: 'RobotoDraft', sans-serif;*/
+  background-color: #E5E5E5;
+  font-family: 'RobotoDraft', sans-serif;
 }
-
-core-header-panel {
-  height: 100%;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-core-toolbar {
-  /*background: #03a9f4;
-  color: white;*/
-  font-size: 16px;
-}
-
-.container {
-  width: 80%;
-  margin: 50px auto;
-}
-
-#tabs {
-  width: 100%;
-  margin: 0;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  text-transform: uppercase;
-}
-
-paper-input.narrow {
-  width: 180px;
-}
-
-table {
-}
-
-table td {
-  border-bottom: solid 1px white;
-}
-
-/*paper-button {
-  background: #42bd41;
-}*/
