Renamed music-app component

--- a/public/components/music-app.html
+++ b/public/components/music-app.html
@@ -1,7 +1,7 @@
 <link rel="import" href="meteor-collection.html">
 <link href="/bower_components/core-animated-pages/core-animated-pages.html" rel="import">
 
-<polymer-element name="music-demo">
+<polymer-element name="music-app">
   <template>
 
     <style>
@@ -116,7 +116,7 @@
 
   </template>
   <script>
-    Polymer('music-demo', {
+    Polymer('music-app', {
 
       page: 0,
 
