--- a/public/components/music-app.html
+++ b/public/components/music-app.html
@@ -1,5 +1,10 @@
+<link rel="import" href="meteor-status.html">
 <link rel="import" href="meteor-collection.html">
 <link href="/bower_components/core-animated-pages/core-animated-pages.html" rel="import">
+<link href="/bower_components/core-animated-pages/transitions/slide-down.html" rel="import">
+<link href="/bower_components/core-icons/core-icons.html" rel="import">
+<link href="/bower_components/core-toolbar/core-toolbar.html" rel="import">
+<link href="/bower_components/paper-icon-button/paper-icon-button.html" rel="import">
 
 <polymer-element name="music-app">
   <template>
@@ -34,7 +39,7 @@
         font-weight: bold;
       }
       #details {
-        padding: 250px 10% 0;
+        padding: 150px 10% 0;
       }
       .card {
         height: 400px;
@@ -59,16 +64,28 @@
       .card-album-title {
         font-size: 2em;
       }
+      .back-button {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+      }
     </style>
 
-    <meteor-collection name="music" ref="{{cref}}"></meteor-collection>
-    <meteor-subscribe name="albums"></meteor-subscribe>
+    <meteor-status status="{{status}}"></meteor-status>
+    <meteor-collection name="music" ref="{{collection}}"></meteor-collection>
+    <meteor-subscribe name="albums" isready="{{subready}}"></meteor-subscribe>
     <meteor-subscribe id="subalbum" name="album"></meteor-subscribe>
-    <meteor-query id="query" collection="{{cref}}" options="{{options}}" data="{{items}}"></meteor-query>
+    <meteor-query id="query" collection="{{collection}}" options="{{options}}" data="{{items}}"></meteor-query>
 
-    <core-animated-pages selected="{{page}}" transitions="hero-transition cross-fade" on-core-animated-pages-transition-end="{{complete}}">
+    <core-animated-pages selected="{{page}}" transitions="hero-transition cross-fade slide-down" on-core-animated-pages-transition-end="{{complete}}">
 
       <section>
+
+        <core-toolbar slide-down>
+          <h1>Music</h1>
+          <div flex></div>
+          <core-icon icon="{{status.connected ? 'cloud-done' : 'cloud-off'}}"></core-icon>
+        </core-toolbar>
 
         <div class="chip-container" hero-p on-tap="{{transition}}">
 
@@ -88,6 +105,8 @@
       </section>
 
       <section id="details">
+
+        <paper-icon-button class="back-button" icon="arrow-back" on-tap="{{transition}}" cross-fade></paper-icon-button>
 
         <div class="card" layout horizontal hero-id="{{selectedAlbum.artist}}-{{selectedAlbum.album}}" hero on-tap="{{transition}}">
           <div class="card-left" style="background:{{selectedAlbum.art}};" hero-id="{{selectedAlbum.artist}}-{{selectedAlbum.album}}-art" hero></div>
@@ -117,15 +136,10 @@
   </template>
   <script>
     Polymer('music-app', {
-
       page: 0,
-
       selectedAlbum: null,
-
-      cref: null, // just to be able to play with collection in console with document.querySelector('music-demo').cref
-
+      collection: null,
       options: {sort: {artist: 1}},
-
       transition: function(e) {
         if (this.page === 0 && e.target.templateInstance.model.item) {
           this.selectedAlbum = e.target.templateInstance.model.item;
