Splitted music-app to separate components

--- a/public/components/meteor-collection.html
+++ b/public/components/meteor-collection.html
@@ -60,9 +60,9 @@
     Polymer('meteor-query', {
       computation: null,
       publish: {
+        data: null,
         collection: null,
         handle: null,
-        data: [],
         query: {},
         options: {}
       },
@@ -73,24 +73,35 @@
         if (this.handle) {
           this.handle.stop();
           this.handle = null;
-          this.data = [];
         }
 
         if (this.collection) {
+          this.data = [];
+          this.initialdata = [];
+          this.initdone = false;
+
           this.handle = this.collection.find(this.query, this.options).observeChanges({
             addedBefore: function(id, fields, before) {
               // added _id
               fields._id = id;
               if (before == null) {
-                this.data.push(fields);
-                return;
+                if (this.initdone) {
+                  this.data.push(fields);
+                } else {
+                  this.initialdata.push(fields);
+                }
               } else {
-                var i = this._findIndex(before);
-                this.data.splice(i, 0, fields);
+                if (this.initdone) {
+                  var i = this._findIndex(this.data, before);
+                  this.data.splice(i, 0, fields);
+                } else {
+                  var i = this._findIndex(this.initData, before);
+                  this.initdata.splice(i, 0, fields);
+                }
               }
             }.bind(this),
             changed: function(id, fields) {
-              var entry = this.data[this._findIndex(id)];
+              var entry = this.data[this._findIndex(this.data, id)];
               for(var field in fields) {
                 if(fields[field] === undefined) {
                   delete entry[field];
@@ -100,26 +111,31 @@
               }
             }.bind(this),
             movedBefore: function(id, before) {
-              var oldindex = this._findIndex(id);
+              var oldindex = this._findIndex(this.data, id);
               var entry = this.data.splice(oldindex, 1)[0];
 
               if (before) {
-                var newindex = this._findIndex(before);
+                var newindex = this._findIndex(this.data, before);
                 this.data.splice(newindex, 0, entry);
               } else {
                 this.data.push(entry);
               }
             }.bind(this),
             removed: function(id) {
-              var index = this._findIndex(id);
+              var index = this._findIndex(this.data, id);
               this.data.splice(i, 1);
             }.bind(this)
           });
+
+          // push initial data as observeChanges returns.
+          this.initdone = true;
+          this.data = this.initialdata;
+          this.initialdata = null;
         }
       },
-      _findIndex: function(id) {
-        for (i = 0; i < this.data.length; i++) {
-          if (EJSON.equals(this.data[i]._id,id)) {
+      _findIndex: function(data, id) {
+        for (i = 0; i < data.length; i++) {
+          if (EJSON.equals(data[i]._id,id)) {
             return i;
           }
         }
